--- a/themes/paperesque/layouts/_default/baseof.html
+++ b/themes/paperesque/layouts/_default/baseof.html
@@ -26,6 +26,14 @@
   <body
   class="{{ block "body-classes" . }}{{ end }}"
   lang="{{ .Site.LanguageCode }}">
+  {{ if not .Site.IsServer }}
+  {{ if $.Site.Params.google_tag_manager }}
+  <!-- Google Tag Manager (noscript) -->
+  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id={{ $.Site.Params.google_tag_manager }}"
+  height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+  <!-- End Google Tag Manager (noscript) -->
+{{ end }}
+{{ end }}
   <div class="nav-bkg drop-shadow">
     <nav class="content-container pagewide-bar-padding">
       <span class="divider">/ </span>
